--- a/inventory/azure_rm.yaml
+++ b/inventory/azure_rm.yaml
@@ -6,6 +6,7 @@ auth_source: auto
 conditional_groups:
   linux: "image.offer is defined and 'CentOS' in image.offer"
   windows: "image.offer is defined and 'WindowsServer' in image.offer"
+  azure: true
 default_host_filters:
   - "provisioning_state != \"succeeded\""
 keyed_groups:
