add mesh peers for wireguard in subnet

--- a/playbooks/wireguard.yml
+++ b/playbooks/wireguard.yml
@@ -3,3 +3,8 @@
   roles:
   - ansible-modules-bitwarden
   - wireguard
+  tasks:
+  - name: Install coredns on server
+    when: '"wireguard" in inventory_hostname'
+    include_role:
+      name: coredns
