--- a/inventory/home.yaml
+++ b/inventory/home.yaml
@@ -1,10 +1,15 @@
 home:
   hosts:
-    desktop:
-      ansible_host: 192.168.0.164
-      tags:
-        wireguard_ip: 192.168.8.1
-    raspi:
-      ansible_host: 192.168.0.45
-      tags:
-        wireguard_ip: 192.168.8.2
+  children:
+    k3s:
+      hosts:
+        desktop:
+          ansible_host: 192.168.0.164
+          tags:
+            wireguard_ip: 192.168.8.1
+            k3s-role: agent
+        raspi:
+          ansible_host: 192.168.0.45
+          tags:
+            wireguard_ip: 192.168.8.2
+            k3s-role: server
