--- a/playbooks/k3s.yml
+++ b/playbooks/k3s.yml
@@ -1,6 +1,6 @@
-- name: configure k3s server
-  hosts: k3s:_k3s
+- name: configure k3s agents and servers
+  hosts: _k3s_server:_k3s_agent
   roles:
   - ansible-modules-bitwarden
-  #- swap
+  - swap
   - k3s
