--- a/roles/k3s/vars/main.yml
+++ b/roles/k3s/vars/main.yml
@@ -1,2 +1,2 @@
 k3s_token: "{{ lookup('bitwarden', 'k3s', field='k3s_token', custom_field=true) }}"
-k3s_server_url: https://raspi:6443
+k3s_server_url: https://192.168.8.2:6443
