--- a/roles/wireguard/vars/main.yml
+++ b/roles/wireguard/vars/main.yml
@@ -1,7 +1,9 @@
-wireguard_server_cidr: 192.168.8.0/32
-wireguard_vnet_cidr: 10.0.0.0/8, 192.168.8.0/24
 wireguard_server_endpoint: mdghome.switzerlandnorth.cloudapp.azure.com:51820
 wireguard_server_publickey: "{{ lookup('bitwarden', 'wireguard', field='server_publickey', custom_field=true) }}"
+
+wireguard_vnet_cidr: 192.168.8.0/24
+
+remote_vnet_cidr: 10.0.172.0/24
 
 # ToDO: Make as list
 wireguard_mobile_ip: "192.168.8.254"
