--- a/roles/k3s/tasks/main.yml
+++ b/roles/k3s/tasks/main.yml
@@ -8,6 +8,17 @@
   become: yes
   command: hostnamectl set-hostname {{ inventory_hostname }}
 
+- name: Get the k3s token
+  become: yes
+  ansible.builtin.slurp:
+    src: /var/lib/rancher/k3s/server/node-token
+  register: k3s_token
+  delegate_to: "{{ groups._k3s_server[0] }}"
+
+- name: Set k3s server url
+  set_fact:
+    k3s_server_url: "https://{{ hostvars[groups._k3s_server[0]].tags.wireguard_ip }}:6443"
+
 - name: Create a directory if it does not exist
   become: yes
   ansible.builtin.file:
@@ -29,7 +40,7 @@
     content: |
       [Service]
       ExecStart=
-      ExecStart=/usr/bin/k3s server --server {{ k3s_server_url }} --snapshotter=native --token {{ k3s_token }} --advertise-address {{ hostvars[inventory_hostname]['tags']['wireguard_ip'] }} --flannel-iface=wg0 --node-taint node-role.kubernetes.io/master=true:NoSchedule
+      ExecStart=/usr/bin/k3s server --server {{ k3s_server_url }} --snapshotter=native --token {{ k3s_token['content'] | b64decode | trim }} --advertise-address {{ hostvars[inventory_hostname]['tags']['wireguard_ip'] }} --flannel-iface=wg0 --node-taint node-role.kubernetes.io/master=true:NoSchedule
 
 - name: edit k3s systemd service for agent
   become: yes
@@ -43,7 +54,7 @@
     content: |
       [Service]
       ExecStart=
-      ExecStart=/usr/bin/k3s agent --snapshotter=native --server {{ k3s_server_url }} --token {{ k3s_token }} --flannel-iface=wg0
+      ExecStart=/usr/bin/k3s agent --snapshotter=native --server {{ k3s_server_url }} --token {{ k3s_token['content'] | b64decode | trim }} --flannel-iface=wg0
 
 - name: ufw allow k3s 6443
   become: yes
